--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
 
-# Set headers for assets
+# Set headers for assets. It improves caching and performance.
 <FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico)$">
     Header set Cache-Control "max-age=604800, public"
 </FilesMatch>
